syntax = "proto3";
package fits_proto;
import "defs.proto";

message SpectralProfileRequest {
    string uuid = 1;
    sfixed32 region_id = 2;
    // int32 x = 3;
    // int32 y = 4;
    // int32 z = 5;
    // int32 numPixels = 6;
    // int32 width = 7;
    // int32 height = 8;
    // repeated bool mask = 9;
  }

  message SpectralProfileReaderRequest {
    string uuid = 1;
    RegionInfo region_info = 2;  
    int32 x = 3;
    int32 y = 4;
    int32 z = 5;
    int32 numPixels = 6;
    int32 width = 7;
    int32 height = 8;
  }
  
  
  message SpectralProfileReaderResponse {
    bytes raw_values_fp32 = 1;
    bytes counts=2;
  }
    
  message SpectralProfileResponse {
    bytes raw_values_fp32 = 1;
  }